# learning_rust

./: .gitignore  docker-compose.yaml
audio_upload_service/: docker-compose.yaml
audio_upload_service/backend/: Cargo.toml  Dockerfile
audio_upload_service/backend/src/: api_doc.rs  hls.rs  loader_rustfs.rs  main.rs  progress.rs  storage.rs  stream.rs  upload.rs  validation.rs
audio_upload_service/backend/src/kafka/: consumer.rs  mod.rs  producer.rs
audio_upload_service/frontend/: index.html  nginx.conf
audio_upload_service/kafka/: server.properties
backend/: Cargo.toml  Dockerfile
backend/src/: loader.rs  main.rs  upload.rs  validation.rs
frontend/: index.html
greppy/: Cargo.toml
greppy/src/: lib.rs  main.rs
sorting/src/: main.rs
sorting/src/sorting/: bubble.rs  heap_sort.rs  mod.rs  quick_sort.rs  selection.rs
todo_list/: .dockerignore  .gitignore  docker-compose.yml
todo_list/backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  test_api.sh
todo_list/backend/migrations/: 0001_create_todo_list_up.sql
todo_list/backend/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  postgres.rs  todo.rs
todo_list/backend/src/db/: mod.rs  postgres.rs
todo_list/backend/src/handlers/: mod.rs  todo.rs
todo_list/backend/src/models/: todo.rs
todo_list/frontend/: .dockerignore  Dockerfile  nginx.conf  vite.config.ts
todo_list/frontend/src/: App.css  App.tsx  TodoForm.tsx  TodoItem.tsx  api.ts  index.css
todo_list/src/: main.rs
try_winapi/: Cargo.toml
try_winapi/src/: lib.rs  main.rs
