[package]
name = "todo_list"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "^0.8"
deadpool-postgres = "0.9.0"
actix-web = "4.0.0-beta.8"
actix-cors = "0.6"
actix-web-lab = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "^0.4"
tokio-postgres = "0.7.16"
tokio-postgres-migration = "^0.1"
validator = { version = "0.16", features = ["derive"] }